--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,7 @@
     <dimen name="table_cell_leftweightfortwowheeler">0.6</dimen>
     <dimen name="table_cell_rightweightfortwowheeler">0.4</dimen>
     <dimen name="table_cell_marginfortwowheeler">5dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
