--- a/app/src/main/res/layout/activity_helpandsupport.xml
+++ b/app/src/main/res/layout/activity_helpandsupport.xml
@@ -14,6 +14,7 @@
         android:gravity="center_horizontal"
         android:text="For any queries or feedback feel free to contact us at below mentioned contact:"
         android:textSize="20sp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -27,7 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mobile no :"
-        android:textSize="17sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintVertical_bias="0.24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+91-8602040955"
-        android:textSize="17sp"
+        android:textSize="20sp"
+        android:textAlignment="center"
         app:layout_constraintVertical_bias="0.29"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,7 +54,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email-id :"
-        android:textSize="17sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintVertical_bias="0.37"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,8 +67,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="pranaygarg003@gmail.com"
-        android:textSize="17sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintVertical_bias="0.42"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:id="@+id/seclast_text"
+        style="@style/general_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Developed By"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        app:layout_constraintVertical_bias="0.60"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,10 +92,10 @@
         style="@style/general_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Made By \n Pranay Garg"
+        android:text="Pranay Garg"
         android:textSize="20sp"
-        android:gravity="center"
-        app:layout_constraintVertical_bias="0.60"
+        android:textAlignment="center"
+        app:layout_constraintVertical_bias="0.65"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
